2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExpressionFillerVisitor.cs: Add the ceq code to the acceptable
	instructions set.  With this change, all the bugs in code compiled under
	csc without optimization flag are fixed.

2007-12-21  Nestor Salceda  <nestor.salceda@gmail.com>

	* ExpressionFillerVisitor.cs: Avoid creating empty expressions, because
	the equals method in the Expression class checks for the same size, and
	if the size is zero, then the equals returns true.  Fixes one of the 
	bug in code compiled under csc without optimization flag.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: As the rule is only applied to types, then
	if the type is Compiler Generated, skip the type; instead of check the
	field names.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: Added the special case for the fields
	prefixed as $$field-, when this happens, there aren't a common prefix.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* Expression.cs, ExpressionFillerVisitor.cs: Added the code for
	including the Stfld in the Expressions, and computate it for check the
	code duplication.

2007-11-30  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidLargeClassesRule.cs: Extract a method and use a predicate for the
	checking.  This fixes the code duplication warning.

2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* CodeDuplicatedLocator.cs: Renamed field's for avoid the common prefix
	that warn us for the LargeClass smell.

2007-11-29  Nestor Salceda  <nestor.salceda@gmail.com>

	* AvoidSpeculativeGeneralityRule.cs: Change the behavior of unnecessary
	delegation.  A class with unnecessary delegation is a class that mostly
	forwards and delegates the calls.

2007-11-28  Nestor Salceda  <nestor.salceda@gmail.com>
	
	* AvoidCodeDuplicatedInSameClassRule.cs,
	AvoidCodeDuplicatedInSiblingClassesRule.cs, AvoidLongMethodsRule.cs,